--- a/config/scaffolding/SttCustomerManagementProject.yml
+++ b/config/scaffolding/SttCustomerManagementProject.yml
@@ -27,10 +27,10 @@ services:
   packages:
   - name: SttCustomerManagementProject
     version: "1.0"
-- serviceName: pub.date:getCurrentDateString
+- serviceName: project.sttcustomermanagement.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.operations.actions:updateCustomer
   packages:
-  - name: WmPublic
-    version: 11.1.0.0.1
+  - name: SttCustomerManagementProject
+    version: "1.0"
 configurationVariables:
   ? artConnection.SttCustomerManagementProject.project.sttcustomermanagement.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.db_azuresql_dada.connectionManagerSettings.expireTimeout
   : "1000"
