--- a/config/scaffolding/SttCustomerManagementProject.yml
+++ b/config/scaffolding/SttCustomerManagementProject.yml
@@ -11,19 +11,7 @@ packages:
   wpmServer: https://packages.webmethods.io
   wpmRegistry: softwareag
 services:
-- serviceName: project.sttcustomermanagement.integrations:upsertCustomer
-  packages:
-  - name: SttCustomerManagementProject
-    version: "1.0"
-- serviceName: project.sttcustomermanagement.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.operations.actions:selectCustomer
-  packages:
-  - name: SttCustomerManagementProject
-    version: "1.0"
-- serviceName: project.sttcustomermanagement.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.operations.actions:insertCustomer
-  packages:
-  - name: SttCustomerManagementProject
-    version: "1.0"
-- serviceName: project.sttcustomermanagement.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.operations.actions:updateCustomer
+- serviceName: project.sttcustomermanagement.integrations:upsertCustomerV2
   packages:
   - name: SttCustomerManagementProject
     version: "1.0"
