--- a/config/scaffolding/SttCustomerManagementProject.yml
+++ b/config/scaffolding/SttCustomerManagementProject.yml
@@ -15,6 +15,10 @@ services:
   packages:
   - name: SttCustomerManagementProject
     version: "1.0"
+- serviceName: pub.flow:debugLog
+  packages:
+  - name: WmPublic
+    version: 11.1.0.0.1
 - serviceName: project.sttcustomermanagement.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.operations.actions:selectCustomer
   packages:
   - name: SttCustomerManagementProject
